@@ -5,3 +5,5 @@ This is my Experimentals samples
 2.File extension Checking 
 
 3.list the directory and checking the object is file or directory
+
+4.List data type practical examples
